cleaning the code

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -16,14 +16,14 @@
             <div class="desc-groom">
                 <p>
                     <span style="color: #1b5f8c"
-                        ><strong>First princess of</strong></span
+                        ><strong>Princess of</strong></span
                     ><br />
-                    <span class="text-[#9f46d6] parents-font"
+                    <span class="text-[#1890c9] parents-font"
                         ><strong>Mr Biju TJ</strong></span
                     >
                     <br />
-                    <span class="text-[#9f46d6] parents-font"
-                        ><strong>Mrs. Slivy Biju</strong></span
+                    <span class="text-[#1890c9] parents-font"
+                        ><strong>Mrs. Silvy Biju</strong></span
                     >
                 </p>
                 <div id="social-media-rehan">
@@ -51,8 +51,8 @@
                     alt="Bride"
                     class="w-64 h-64 rounded-full mx-auto mb-4 object-cover"
                 />
-                <h2 class="text-[#9f46d6] text-2xl font-bold">Aleena Biju</h2>
-                <p class="text-[#9f46d6]">The Bride</p>
+                <h2 class="text-[#1890c9] text-2xl font-bold">Aleena Biju</h2>
+                <p class="text-[#1b5f8c]">The Bride</p>
             </div>
             <svg
                 width="24"
@@ -74,21 +74,21 @@
                     alt="Groom"
                     class="size-64 rounded-full object-cover mb-4"
                 />
-                <h2 class="text-[#9f46d6] text-2xl font-bold">
-                    Allen Mathew Joseph s
+                <h2 class="text-[#1890c9] text-2xl font-bold">
+                    Allen Mathew Joseph
                 </h2>
-                <p class="text-[#9f46d6]">The Groom</p>
+                <p class="text-[#1b5f8c]">The Groom</p>
             </div>
             <div class="desc-groom">
                 <p>
                     <span style="color: #1b5f8c"
-                        ><strong>First son of</strong></span
+                        ><strong>Prince of</strong></span
                     ><br />
-                    <span class="text-[#9f46d6] parents-font"
+                    <span class="text-[#1890c9] parents-font"
                         ><strong>Mr Joseph Mathew </strong></span
                     >
                     <br />
-                    <span class="text-[#9f46d6] parents-font"
+                    <span class="text-[#1890c9] parents-font"
                         ><strong>Mrs Theresa Joseph</strong></span
                     >
                 </p>
