--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,30 +6,16 @@
     <div class="flex justify-center">
         <img src="/images/logo.png" alt="" class="size-96 couple-main" />
     </div>
-    <h3 class="text-[#9f46d6] text-4xl md:text-6xl font-semibold mb-4 underline-offset-8 underline">
+    <h3
+        class="text-[#007EA7] text-4xl md:text-6xl font-semibold mb-4"
+        style="font-family: 'Bodoni Moda Variable', serif;"
+    >
         A&A
     </h3>
-    <p class="text-[#9f46d6] text-xl md:text-2xl">
+    <p class="text-[#007EA7] text-xl md:text-2xl">
         <strong>We invite you to our wedding</strong>
     </p>
-    <div class="flex items-center justify-center mt-4">
-        <svg
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="white"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round">
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-                d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z"
-            ></path>
-            <path d="M16 3v4"></path><path d="M8 3v4"></path><path d="M4 11h16"
-            ></path><path d="M11 15h1"></path><path d="M12 15v3"></path>
-        </svg>
-        <span class="text-[#9f46d6]">January 06, 2025</span>
+    <div class="flex items-center font-semibold justify-center mt-4">
+        <span class="text-[#007EA7]">January 06, 2025, 10:30 AM</span>
     </div>
 </header>
-
-<style></style>
