--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -1,7 +1,7 @@
 <section class="py-10">
     <div class="container mx-auto">
         <header class="pt-20 pb-10 text-center">
-            <h1 class="text-[#9f46d6] text-4xl md:text-6xl font-bold mb-4">
+            <h1 class="text-[#1890c9] text-4xl md:text-6xl font-bold mb-4">
                 Location
             </h1>
         </header>
@@ -18,7 +18,7 @@
             <a
                 href="https://www.google.com/maps/place/St.+John+the+Baptist+Syro+Malabar+Forane+Church,+Nedumkunnam/@9.5060136,76.6541917,17z/data=!3m1!4b1!4m5!3m4!1s0x3b063033a6788a77:0x2a4ddb38381aed9d!8m2!3d9.5060136!4d76.6541917"
                 target="_blank"
-                class="text-[#9f46d6] text-xl md:text-2xl text-pretty py-5"
+                class="text-[#1890c9] text-xl md:text-2xl text-pretty py-5"
             >
                 <p>St. John the Baptist Syro Malabar Forane Church</p>
                 <p>Nedumkunnam Karukachal Manimala Road</p>
