--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -17,21 +17,21 @@ const weddingDate = new Date("2025-01-06T10:30:00");
             alt="Flower 2"
         />
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
-            <div class="bg-[#9f46d6] bg-opacity-50 p-4 rounded-lg">
+            <div class="bg-[#1890c9] bg-opacity-50 p-4 rounded-lg">
                 <span id="days" class="text-3xl md:text-4xl font-bold">0</span>
                 <p>Days</p>
             </div>
-            <div class="bg-[#9f46d6] bg-opacity-50 p-4 rounded-lg">
+            <div class="bg-[#1890c9] bg-opacity-50 p-4 rounded-lg">
                 <span id="hours" class="text-3xl md:text-4xl font-bold">0</span>
                 <p>Hours</p>
             </div>
-            <div class="bg-[#9f46d6] bg-opacity-50 p-4 rounded-lg">
+            <div class="bg-[#1890c9] bg-opacity-50 p-4 rounded-lg">
                 <span id="minutes" class="text-3xl md:text-4xl font-bold"
                     >0</span
                 >
                 <p>Minutes</p>
             </div>
-            <div class="bg-[#9f46d6] bg-opacity-50 p-4 rounded-lg">
+            <div class="bg-[#1890c9] bg-opacity-50 p-4 rounded-lg">
                 <span id="seconds" class="text-3xl md:text-4xl font-bold"
                     >0</span
                 >
