--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -6,7 +6,7 @@
             </span>
         </div>
         <br />
-        <div class="text-end px-32">
+        <div class="text-end px-20 lg:px-32">
             <span class="text-2xl md:text-4xl text-end font-bold mb-4"
                 >Mark 10:9</span
             >
