--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Location from "../components/Location.astro";
 import Images from "../components/Images.astro";
 import Quote from "../components/Quote.astro";
 import Story from "../components/Story.astro";
+import Music from "../components/Music.astro";
 ---
 
 <Layout title="Allen Wedding">
@@ -15,6 +16,8 @@ import Story from "../components/Story.astro";
         style="background-image: url(/images/background/repeat-background/nice_snow.png);"
     >
         <Header />
+        <Music />
+
         <Countdown />
     </section>
     <section
