--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -26,24 +26,6 @@
                         ><strong>Mrs. Silvy Biju</strong></span
                     >
                 </p>
-                <div id="social-media-rehan">
-                    <ul class="fh5co-social-icons">
-                        <li>
-                            <a
-                                target="_blank"
-                                href="https://github.com/rayhanyulanda"
-                                ><i class="icon-github-with-circle"></i></a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                target="_blank"
-                                href="https://www.linkedin.com/in/rayhanyulanda/"
-                                ><i class="icon-linkedin-with-circle"></i></a
-                            >
-                        </li>
-                    </ul>
-                </div>
             </div>
             <div class="text-center">
                 <img
@@ -59,7 +41,7 @@
                 height="24"
                 viewBox="0 0 24 24"
                 fill="none"
-                stroke="currentColor"
+                stroke="#1b5f8c"
                 stroke-width="2"
                 stroke-linecap="round"
                 stroke-linejoin="round"
@@ -92,24 +74,6 @@
                         ><strong>Mrs Theresa Joseph</strong></span
                     >
                 </p>
-                <div id="social-media-rehan">
-                    <ul class="fh5co-social-icons">
-                        <li>
-                            <a
-                                target="_blank"
-                                href="https://github.com/rayhanyulanda"
-                                ><i class="icon-github-with-circle"></i></a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                target="_blank"
-                                href="https://www.linkedin.com/in/rayhanyulanda/"
-                                ><i class="icon-linkedin-with-circle"></i></a
-                            >
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
