Removing documents + fixing music

--- a/src/components/Music.astro
+++ b/src/components/Music.astro
@@ -1,7 +1,7 @@
 <audio id="audioPlayer" src="/audio/audio.mp3" autoplay></audio>
 
 <script>
-    document.addEventListener("astro:page-load", () => {
+    document.addEventListener("load", () => {
         const audioPlayer = document.getElementById(
             "audioPlayer",
         ) as HTMLAudioElement;
