--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,13 @@ import Story from "../components/Story.astro";
 import Music from "../components/Music.astro";
 ---
 
-<Layout title="Allen Wedding">
+<Layout title="Allen and Aleena's Wedding">
     <section
         class="py-10"
         style="background-image: url(/images/background/repeat-background/nice_snow.png);"
     >
         <Header />
         <Music />
-
         <Countdown />
     </section>
     <section
