--- a/src/components/Music.astro
+++ b/src/components/Music.astro
@@ -1,20 +1,11 @@
 <audio id="audioPlayer" src="/audio/audio.mp3" autoplay></audio>
 
 <script>
-    document.addEventListener("load", () => {
+    document.addEventListener("DOMContentLoaded", () => {
         const audioPlayer = document.getElementById(
             "audioPlayer",
         ) as HTMLAudioElement;
-        const playPauseBtn = document.getElementById("playPauseBtn");
 
-        playPauseBtn!.addEventListener("click", () => {
-            if (audioPlayer.paused) {
-                audioPlayer.play();
-                playPauseBtn!.textContent = "Pause";
-            } else {
-                audioPlayer.pause();
-                playPauseBtn!.textContent = "Play";
-            }
-        });
+        audioPlayer.play();
     });
 </script>
