More changes for now

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -13,13 +13,13 @@
         <div
             class="flex flex-col md:flex-row items-center justify-center gap-10"
         >
-            <div class="desc-groom">
+            <div class="desc-groom text-center">
                 <p>
                     <span style="color: #1b5f8c"
                         ><strong>Princess of</strong></span
                     ><br />
                     <span class="text-[#1890c9] parents-font"
-                        ><strong>Mr Biju TJ</strong></span
+                        ><strong>Mr. Biju TJ</strong></span
                     >
                     <br />
                     <span class="text-[#1890c9] parents-font"
@@ -61,17 +61,17 @@
                 </h2>
                 <p class="text-[#1b5f8c]">The Groom</p>
             </div>
-            <div class="desc-groom">
+            <div class="desc-groom text-center">
                 <p>
                     <span style="color: #1b5f8c"
                         ><strong>Prince of</strong></span
                     ><br />
                     <span class="text-[#1890c9] parents-font"
-                        ><strong>Mr Joseph Mathew </strong></span
+                        ><strong>Mr. Joseph Mathew </strong></span
                     >
                     <br />
                     <span class="text-[#1890c9] parents-font"
-                        ><strong>Mrs Theresa Joseph</strong></span
+                        ><strong>Mrs. Theresa Joseph</strong></span
                     >
                 </p>
             </div>
