--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -20,9 +20,9 @@
                 target="_blank"
                 class="text-[#1890c9] text-xl md:text-2xl text-pretty py-5"
             >
-                <p>St. John the Baptist Syro Malabar Forane Church</p>
-                <p>Nedumkunnam Karukachal Manimala Road</p>
-                <p>Kerala, 686542, India</p>
+                <p class="font-semibold">St. John the Baptist Syro Malabar Forane Church</p>
+                <p class="font-semibold">Nedumkunnam Karukachal Manimala Road</p>
+                <p class="font-semibold">Kerala, 686542, India</p>
             </a>
         </div>
     </div>
