--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -1,34 +1,45 @@
 <div class="py-20">
-    <h1 class="text-[#1890c9] text-3xl md:text-6xl font-bold mb-4 text-center">SHE SAID YES!</h1>
+    <h1 class="text-[#1890c9] text-3xl md:text-6xl font-bold mb-4 text-center">
+        SHE SAID YES!
+    </h1>
 
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        Our story began with a fleeting glance at school in 2015, where we
-        instantly felt a connection that seemed destined. Life took us on
-        different paths, but fate brought us back together years later, in
-        February 2018, we crossed paths again in a church, a place where
-        serendipity seemed to bless us. From that day on, we knew we wanted to
-        share our lives forever. What started as a friendship blossomed into
-        deep, comforting love.
+        With the blessings of our parents, we, Aleena Biju and Allen Mathew
+        Joseph, joyfully invite you to celebrate our union in holy matrimony.
+        The wedding will take place on January 6th, 2025, at
+        St. John the Baptist Syro Malabar Forane Church. Following the Holy Mass
+        inside the church, a reception will be held in the church's parish hall.
     </p>
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        Our journey over the past six years has been filled with ups and downs,
-        moments of joy, and challenges that tested our bond. Despite the
-        hurdles, including a year and a half of long-distance relationship, our
-        love only grew stronger.
-    </p>
-
-    <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        Now, with the blessings of our families, we are stepping into the next
-        chapter of our lives together. This is the moment we have been waiting
-        for, the moment our hearts have longed for.
+        As we embark on this beautiful journey together, we look forward to a
+        future filled with love, laughter, and countless cherished moments. Your
+        presence and prayers will make our special day even more memorable, and
+        we are excited to share this joyous occasion with you.
     </p>
 
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        As we stand on the brink of forever, we invite you all to join us in
-        celebrating the incredible journey that has brought us to this moment.
+        We envision a life where we support and uplift each other, creating a
+        home filled with warmth, kindness, and understanding. Together, we will
+        face life's challenges and celebrate its triumphs, always holding each
+        other close.
     </p>
 
-    <p class="text-[#1890c9] text-xl md:text-2xl text-balance pt-5 text-end mx-28 lg:mx-72">With lots and lots of love,</p>
+    <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
+        Your presence at our wedding will be a cherished gift, and we hope to
+        create wonderful memories with you on this special day. Please join us
+        as we begin this new chapter of our lives, surrounded by the love and
+        blessings of our dear family and friends.
+    </p>
 
-    <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72">Allen & Aleena</p>
+    <p
+        class="text-[#1890c9] text-xl md:text-2xl text-balance pt-5 text-end mx-28 lg:mx-72"
+    >
+        With love and gratitude,
+    </p>
+
+    <p
+        class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
+    >
+        Allen & Aleena
+    </p>
 </div>
