--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4 py-56">
         <div class="text-center">
             <span class="text-2xl md:text-4xl font-bold mb-4">
-                "Therefore what God has joined together, let no one separate."
+                "What God has joined together, let no one separate."
             </span>
         </div>
         <br />
