--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -4,8 +4,7 @@
     </h1>
 
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        With the blessings of our parents, we, Aleena Biju and Allen Mathew
-        Joseph, joyfully invite you to celebrate our union in holy matrimony.
+        With the blessings of our parents, we, Allen & Aleena, joyfully invite you to celebrate our union in holy matrimony.
         The wedding will take place on January 6th, 2025, at
         St. John the Baptist Syro Malabar Forane Church. Following the Holy Mass
         inside the church, a reception will be held in the church's parish hall.
@@ -41,5 +40,21 @@
         class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
     >
         Allen & Aleena
+    </p>
+  <p
+        class="text-[#1890c9] text-xl md:text-2xl text-balance pt-5 text-end mx-28 lg:mx-72"
+    >
+        Best Compliments,
+    </p>
+
+    <p
+        class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
+    >
+        Anitta Maria Joseph
+    </p>
+<p
+        class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
+    >
+        Alona Biju
     </p>
 </div>
