--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -50,11 +50,7 @@
     <p
         class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
     >
-        Anitta Maria Joseph
+        Anitta Maria Joseph & Alona Biju
     </p>
-<p
-        class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
-    >
-        Alona Biju
-    </p>
+
 </div>
