--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -4,16 +4,17 @@
     </h1>
 
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        With the blessings of our parents, we, Allen & Aleena, joyfully invite you to celebrate our union in holy matrimony.
+        With the blessings of our parents, we, Allen & Aleena, joyfully invite you 
+        to celebrate our union in holy matrimony.
         The wedding will take place on January 6th, 2025, at
         St. John the Baptist Syro Malabar Forane Church. Following the Holy Mass
         inside the church, a reception will be held in the church's parish hall.
     </p>
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        As we embark on this beautiful journey together, we look forward to a
-        future filled with love, laughter, and countless cherished moments. Your
-        presence and prayers will make our special day even more memorable, and
-        we are excited to share this joyous occasion with you.
+       As we take the first step into our forever,we would be honored to have you 
+       by our side to share in the joy of our wedding day.Your love and blessings
+      have always been a source of strength for us, and we would be delighted to 
+      have you join us on this special day.
     </p>
 
     <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
@@ -22,24 +23,14 @@
         face life's challenges and celebrate its triumphs, always holding each
         other close.
     </p>
-
-    <p class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-center">
-        Your presence at our wedding will be a cherished gift, and we hope to
-        create wonderful memories with you on this special day. Please join us
-        as we begin this new chapter of our lives, surrounded by the love and
-        blessings of our dear family and friends.
-    </p>
-
     <p
         class="text-[#1890c9] text-xl md:text-2xl text-balance pt-5 text-end mx-28 lg:mx-72"
     >
         With love and gratitude,
     </p>
-
     <p
         class="text-[#1890c9] text-xl md:text-2xl text-balance py-5 text-end mx-28 lg:mx-72"
-    >
-        Allen & Aleena
+    > Allen & Aleena
     </p>
   <p
         class="text-[#1890c9] text-xl md:text-2xl text-balance pt-5 text-end mx-28 lg:mx-72"
